--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -63,5 +63,5 @@ jobs:
       sudo dpkg --add-architecture i386
       sudo apt-get update
       sudo apt-get install libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
-      git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}
+      git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
       ls ${AGENT_HOMEDIRECTORY}
