--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -65,8 +65,8 @@ jobs:
       sudo apt-get install libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
       ls ${AGENT_HOMEDIRECTORY}/bbcb
-      ls ${AGENT_HOMEDIRECTORY}/bbcb/bbcp
-      cd ${AGENT_HOMEDIRECTORY}/bbcb/bbcp/BlackBox
+      ls ${AGENT_HOMEDIRECTORY}/bbcb/
+      cd ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox
       ./switch-target `uname -s` GUI
       ./build
       cd ${BUILD_SOURCESDIRECTORY}
