--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -73,3 +73,9 @@ jobs:
       cd ${BUILD_SOURCESDIRECTORY}
       ls
       env
+      sudo add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
+      sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+      sudo add-apt-repository ppa:marutter/rdev
+      sudo apt-get update
+      sudo apt-get upgrade
+      sudo apt-get install r-base
