Try to speed up apt

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -60,12 +60,14 @@ jobs:
     vmImage: 'ubuntu-16.04'
   steps:
   - script: |
+      apt list --installed
+      sudo apt-get remove 
       sudo dpkg --add-architecture i386
       sudo add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
       sudo add-apt-repository ppa:marutter/rdev
-      sudo apt-get update
-      sudo apt-get install r-base mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
+      sudo apt-get -qq update
+      sudo apt-get -qq -y install r-base mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
       ls ${AGENT_HOMEDIRECTORY}/bbcb
       ls ${AGENT_HOMEDIRECTORY}/bbcb/
