--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -61,10 +61,10 @@ jobs:
   steps:
   - script: |
       apt list --installed
-      sudo dpkg --add-architecture i386
-      sudo add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
-      sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
-      sudo add-apt-repository ppa:marutter/rdev
+      sudo dpkg -y --add-architecture i386
+      sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
+      sudo apt-key -y adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+      sudo add-apt-repository -y ppa:marutter/rdev
       sudo apt-get -qq update
       sudo apt-get -qq -y install r-base mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
