--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -61,6 +61,8 @@ jobs:
   steps:
   - script: |
       apt list --installed
+      sudo apt-get remove '^libmono.*'
+      sudo apt-get remove '^mono.*'
       sudo dpkg --add-architecture i386
       sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
