--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -1,82 +1,83 @@
 jobs:
-#- job: MultiBUGS_Windows
-#  strategy:
-#    matrix:
-#      1workers_2chains:
-#        CHAINS: '2'
-#        WORKERS: '1'
-#      2workers_2chains:
-#        CHAINS: '2'
-#        WORKERS: '2'
-#      3workers_2chains:
-#        CHAINS: '2'
-#        WORKERS: '3'
-#  timeoutInMinutes: 0
-#  pool:
-#    vmImage: 'windows-2019'
-#  steps:
-#  - script: |
-#      echo on
-#      curl -fsS -o c:\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/msmpisetup.exe
-#      c:\MSMpiSetup.exe -unattend
-#      set PATH=C:\Program Files\Microsoft MPI\Bin;%PATH%
-#    displayName: Update MS-MPI to version 10
-#  - script: |
-#      echo on
-#      curl -fsS -o c:\blackbox-1.7.1.zip https://www.multibugs.org/build/blackbox-1.7.1.zip
-#      7z x c:\blackbox-1.7.1.zip -y -oc:\blackbox
-#      curl -fsS -o c:\blackbox\bbscript.exe https://www.multibugs.org/build/bbscript.exe
-#      c:\blackbox\bbscript.exe /USE %BUILD_SOURCESDIRECTORY% /PAR Developer/Make.odc
-#      c:\blackbox\bbscript.exe /USE %BUILD_SOURCESDIRECTORY% /PAR Developer/LinkingWindows.odc
-#      mkdir c:\MultiBUGS\Dynamic\Sym
-#      mkdir c:\MultiBUGS\Dynamic\Code
-#    displayName: Install BlackBox, Make and Link MultiBUGS
-#  - script: |
-#      echo on
-#      choco install r.project --version 3.5.1 --no-progress
-#      set PATH=C:\Program Files\Microsoft MPI\Bin;C:\Program Files\R\R-3.5.1\bin\x64;%PATH%
-#      Rscript.exe -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
-#    displayName: Install R and required packages
-#  - script: |
-#      echo on
-#      set PATH=C:\Program Files\Microsoft MPI\Bin;C:\Program Files\R\R-3.5.1\bin\x64;%PATH%
-#      IF "%WORKERS%"=="3" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 3, n.chains = 2, report = \"junit\")" 
-#      IF "%WORKERS%"=="2" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 2, n.chains = 2, report = \"junit\")"
-#      IF "%WORKERS%"=="1" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 1, n.chains = 2, report = \"junit\")"
-#      IF "%WORKERS%"=="3" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 3, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
-#      IF "%WORKERS%"=="2" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 2, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
-#      IF "%WORKERS%"=="1" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 1, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
-#    displayName: Run tests
-#  - task: PublishTestResults@2
-#    inputs:
-#      testResultsFiles: 'C:\MultiBUGS\TESTS-*$(WORKERS)workers-$(CHAINS)chains.xml'
-#      mergeTestResults: true
-#      testRunTitle: '$(WORKERS) workers; $(CHAINS) chains'
-#    condition: always()
-#    displayName: 'Publish Test Results'
+- job: MultiBUGS_Windows
+  strategy:
+    matrix:
+      1workers_2chains:
+        CHAINS: '2'
+        WORKERS: '1'
+      2workers_2chains:
+        CHAINS: '2'
+        WORKERS: '2'
+      3workers_2chains:
+        CHAINS: '2'
+        WORKERS: '3'
+  timeoutInMinutes: 0
+  pool:
+    vmImage: 'windows-2019'
+  steps:
+  - script: |
+      echo on
+      curl -fsS -o c:\MSMpiSetup.exe https://download.microsoft.com/download/A/E/0/AE002626-9D9D-448D-8197-1EA510E297CE/msmpisetup.exe
+      c:\MSMpiSetup.exe -unattend
+      set PATH=C:\Program Files\Microsoft MPI\Bin;%PATH%
+    displayName: Update MS-MPI to version 10
+  - script: |
+      echo on
+      curl -fsS -o c:\blackbox-1.7.1.zip https://www.multibugs.org/build/blackbox-1.7.1.zip
+      7z x c:\blackbox-1.7.1.zip -y -oc:\blackbox
+      curl -fsS -o c:\blackbox\bbscript.exe https://www.multibugs.org/build/bbscript.exe
+      c:\blackbox\bbscript.exe /USE %BUILD_SOURCESDIRECTORY% /PAR Developer/Make.odc
+      c:\blackbox\bbscript.exe /USE %BUILD_SOURCESDIRECTORY% /PAR Developer/LinkingWindows.odc
+      mkdir c:\MultiBUGS\Dynamic\Sym
+      mkdir c:\MultiBUGS\Dynamic\Code
+    displayName: Install BlackBox, Make and Link MultiBUGS
+  - script: |
+      echo on
+      choco install r.project --version 3.5.1 --no-progress
+      set PATH=C:\Program Files\Microsoft MPI\Bin;C:\Program Files\R\R-3.5.1\bin\x64;%PATH%
+      Rscript.exe -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
+    displayName: Install R and required packages
+  - script: |
+      echo on
+      set PATH=C:\Program Files\Microsoft MPI\Bin;C:\Program Files\R\R-3.5.1\bin\x64;%PATH%
+      IF "%WORKERS%"=="3" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 3, n.chains = 2, report = \"junit\")" 
+      IF "%WORKERS%"=="2" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 2, n.chains = 2, report = \"junit\")"
+      IF "%WORKERS%"=="1" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 1, n.chains = 2, report = \"junit\")"
+      IF "%WORKERS%"=="3" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 3, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
+      IF "%WORKERS%"=="2" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 2, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
+      IF "%WORKERS%"=="1" Rscript.exe -e "multibugstests:::bugs_examples_all(n.workers = 1, n.chains = 2, report = \"junit\", examples.dir = \"C:/MultiBUGS/Reliability/Examples/\")"
+    displayName: Run tests
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFiles: 'C:\MultiBUGS\TESTS-*$(WORKERS)workers-$(CHAINS)chains.xml'
+      mergeTestResults: true
+      testRunTitle: '$(WORKERS) workers; $(CHAINS) chains'
+    condition: always()
+    displayName: 'Publish Test Results'
 - job: MultiBUGS_Linux
   timeoutInMinutes: 0
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - script: |
-      apt list --installed
-      sudo apt-get remove '^libmono.*' '^mono.*' '^php.*'
+  - script: | 
+      # Uninstalling these packages is NOT needed for MultiBUGS, but vastly speeds up apt-get update on Azure
+      sudo apt-get -qq remove '^libmono.*' '^mono.*' '^php.*'
+    displayName: Uninstall unnecessary packages
+  - script: | 
       sudo dpkg --add-architecture i386
       sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
       sudo add-apt-repository -y ppa:marutter/rdev
       sudo apt-get -qq -y update
       sudo apt-get -qq -y install r-base mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
+    displayName: Install R, 32-bit MPICH, and 32-bit GTK libraries
+  - script: | 
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
-      ls ${AGENT_HOMEDIRECTORY}/bbcb
-      ls ${AGENT_HOMEDIRECTORY}/bbcb/
       cd ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox
       ./switch-target `uname -s` GUI
       ./build
+    displayName: Install BlackBox Cross-Platform
+  - script: | 
       cd ${BUILD_SOURCESDIRECTORY}
-      ls
-      which Rscript
-      which R
-      which mpiexec.mpich
-      which mpiexec
+      # Next build MultiBUGS
+    displayName: Build MultiBUGS
