--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -69,7 +69,9 @@ jobs:
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
       sudo add-apt-repository -y ppa:marutter/rdev
       sudo apt-get -qq -y update
-      sudo apt-get -qq -y install r-base r-base-dev mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
+      sudo apt-get install r-base
+      sudo apt-get install r-base-dev
+      sudo apt-get install mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
     displayName: Install R, 32-bit MPICH, and 32-bit GTK libraries
   - script: | 
       git clone https://github.com/bbcb/bbcp.git ${AGENT_HOMEDIRECTORY}/bbcb
