try separate apt-get

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -88,7 +88,10 @@ jobs:
     displayName: Build MultiBUGS
   - script: |
       # needed for devtools
-      sudo apt-get install libcurl4-openssl-dev libgit2-dev libssh2-1-dev
+      sudo apt-get update
+      sudo apt-get install libcurl4-openssl-dev
+      sudo apt-get install libssl-dev
+      sudo apt-get install libgit2-dev
       Rscript -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
     displayName: Install R packages
   - script: |
