--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -92,6 +92,7 @@ jobs:
       sudo apt-get install libcurl4-openssl-dev
       sudo apt-get install libssl-dev
       sudo apt-get install libgit2-dev
+      sudo apt-get install libssh2-1-dev
       Rscript -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
     displayName: Install R packages
   - script: |
