--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -65,9 +65,8 @@ jobs:
     displayName: Uninstall unnecessary packages
   - script: | 
       sudo dpkg --add-architecture i386
-      sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
+      sudo add-apt-repository -y "deb https://cloud.r-project.org/bin/linux/ubuntu $(lsb_release -sc)-cran35/"
       sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
-      sudo add-apt-repository -y ppa:marutter/rdev
       sudo apt-get -qq -y update
       sudo apt-get install r-base mpich:i386 libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       sudo apt-get install r-base-dev
