--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -97,7 +97,8 @@ jobs:
       Rscript -e "install.packages(\"devtools\", repos=\"https://cloud.r-project.org\")" -e "install.packages(\"xml2\", repos=\"https://cloud.r-project.org\")" -e "devtools::install_github(\"MultiBUGS/R2MultiBUGS\")" -e "devtools::install_github(\"MultiBUGS/multibugstests\")"
     displayName: Install R packages
   - script: |
-      export DISPLAY="127.0.0.1:10.0"
+      export DISPLAY=:99.0
+      Xvfb :99 -screen 0 1600x900x24 &
       Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
     displayName: Run tests
   - task: PublishTestResults@2
