--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -100,7 +100,9 @@ jobs:
   - script: |
       which mpiexec
       which mpiexec.mpich
-      xvfb-run Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
+      sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+      export DISPLAY=":1"
+      Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
       which mpiexec
       #Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
     displayName: Run tests
