--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -60,6 +60,10 @@ jobs:
     vmImage: 'ubuntu-16.04'
   steps:
   - script: | 
+      sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+      export DISPLAY=":1"
+      xhost local:root
+      xclock
       # Uninstalling these packages is NOT needed for MultiBUGS, but vastly speeds up apt-get update on Azure
       sudo apt-get -qq remove '^libmono.*' '^mono.*' '^php.*'
     displayName: Uninstall unnecessary packages
