try 1+1 under Xvfb

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -106,6 +106,7 @@ jobs:
       which mpiexec.mpich
       Xvfb :99 -screen 0 1024x768x24 </dev/null &
       export DISPLAY=":99"
+      DISPLAY=:99 Rscript -e "1+1"
       DISPLAY=:99 Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
       which mpiexec
       #Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
