--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -106,6 +106,13 @@ jobs:
       which mpiexec.mpich
       Xvfb :99 -screen 0 1024x768x24 </dev/null &
       export DISPLAY=":99"
+      cd ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary
+      cat << EOF > script.txt
+      modelDisplay('log')
+      modelCheck('Examples/Camelmodel')
+      modelQuit('y')
+      EOF
+      DISPLAY=:00 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/run-MultiBUGS /PAR script.txt
       DISPLAY=:99 Rscript -e "1+1"
       DISPLAY=:99 Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
       DISPLAY=:99 Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
