--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -112,12 +112,18 @@ jobs:
       modelCheck('Examples/Camelmodel')
       modelQuit('y')
       EOF
-      DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/run-MultiBUGS /PAR script.txt
+      DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/run-MultiBUGS /PAR script.txt &
+      sleep 100
+      DISPLAY=:0 import -window root screenshot.png
       DISPLAY=:99 Rscript -e "1+1"
-      DISPLAY=:99 Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
-      DISPLAY=:99 Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
+      #DISPLAY=:99 Rscript -e "multibugstests:::bugs_examples_all(dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1, report = \"junit\")"
+      #DISPLAY=:99 Rscript -e "multibugstests:::bugs_example(model = \"Air\", dir = \"${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/\", n.workers = 1, n.chains = 1)"
       which mpiexec
     displayName: Run tests
+  -- task: PublishPipelineArtifact@0
+  inputs:
+    artifactName: 'artifactName'
+    targetPath: '${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/screenshot.png'
   - task: PublishTestResults@2
     inputs:
       testResultsFiles: 'C:\MultiBUGS\TESTS-*$(WORKERS)workers-$(CHAINS)chains.xml'
