--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -123,7 +123,7 @@ jobs:
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: 'artifactName'
-      targetPath: '${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/screenshot.png'
+      targetPath: '$(Build.SourcesDirectory)/MultiBUGS-binary/screenshot.png'
   - task: PublishTestResults@2
     inputs:
       testResultsFiles: 'C:\MultiBUGS\TESTS-*$(WORKERS)workers-$(CHAINS)chains.xml'
