--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -88,7 +88,7 @@ jobs:
       cd ${BUILD_SOURCESDIRECTORY}
       g++ -o MultiBUGS MultiBUGS.cpp
       Developer/BuildLinux | ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-dev0
-      cp ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Cons .
+      cp ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/Cons MultiBUGS-binary/
       chmod +x MultiBUGS-binary/OpenBUGS
       chmod +x MultiBUGS-binary/MultiBUGS
       chmod +x MultiBUGS-binary/run-MultiBUGS
