continue and wait 100

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -131,8 +131,8 @@ jobs:
       #DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/run-MultiBUGS &
       #DISPLAY=:99 ${BUILD_SOURCESDIRECTORY}/MultiBUGS-binary/MultiBUGS
       cd ../
-      ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt
-      sleep 5
+      ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt &
+      sleep 100
       ls
       ls MultiBUGS-binary
       #DISPLAY=:99 Rscript -e "1+1"
