--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -105,6 +105,10 @@ jobs:
   - script: |
       which mpiexec
       which mpiexec.mpich
+      ls -la /usr/bin
+      file `which mpiexec`
+      file `which mpiexec.mpich`
+      file `which mpiexec.hydra`
       Xvfb :99 -screen 0 1024x768x24 </dev/null &
       sleep 5
       export DISPLAY=":99"
