--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -127,6 +127,7 @@ jobs:
       modelInits("Examples/Seedsinits.odc", 1)
       modelInits("Examples/Seedsinits1.odc", 2)
       modelGenInits()
+      infoModules()
       modelDistribute(2)
       modelUpdate(2000)
       samplesSet(alpha0)
