--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -75,7 +75,8 @@ jobs:
       sudo apt-get install r-base libgtk2.0-0:i386 gtk2-engines:i386 gtk2-engines-murrine:i386 libcanberra-gtk-module:i386 gnome-icon-theme-full
       sudo apt-get install r-base-dev
       # mpich installs libmpich.so.12 but libmpich-dev install libmpich.so
-      sudo apt-get install mpich:i386 libmpich-dev:i386
+      sudo apt-get install mpich:i386
+      sudo apt-get install libmpich-dev:i386
       # By default, R_LIBS_USERS is not set, so need to allow package installation to site-library
       sudo chmod o+w /usr/local/lib/R/site-library
       #echo $LD_LIBRARY_PATH
