--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -171,7 +171,7 @@ jobs:
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: 'artifactName'
-      targetPath: '$(Build.SourcesDirectory)/screenshot.png'
+      targetPath: '$(Build.SourcesDirectory)/MultiBUGS-binary/screenshot.png'
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: 'artifactName2'
