--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -244,10 +244,10 @@ jobs:
       #nm -D --defined-only libmpich.so
       #
       #worked
-      #mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt
+      mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR MultiBUGS-binary/script.txt
       cd MultiBUGS-binary
       #mpiexec.mpich -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox /PAR script.txt &
-      DISPLAY=:99 mpiexec.mpich -n 1 ./OpenBUGS /PAR script.txt &
+      #DISPLAY=:99 mpiexec.mpich -n 1 ./OpenBUGS /PAR script.txt &
       #mpiexec -n 1 ${AGENT_HOMEDIRECTORY}/bbcb/BlackBox/run-BlackBox &
       sleep 100
       ls
